--- a/public/modules/partials/header.html
+++ b/public/modules/partials/header.html
@@ -59,10 +59,11 @@
             <a href="javascript:void(0);" title="Note" ng-click="$root.openFormByType('note')" class="icon threelink">
             	<ng-md-icon icon="insert_drive_file" style="fill: white" size="25"></ng-md-icon>
             </a>
-            <a href="#" class="icon fourlink">
+            <a href="javascript:void(0);" title="Lost & Found" ng-click="$root.openFormByType('lost_found')" class="icon fourlink">
             	<ng-md-icon icon="business" style="fill: white" size="25"></ng-md-icon>
             </a>
-            <a href="#"  class="icon fivelink">
+            <a href="javascript:void(0);" title="Vending Machine" ng-click="$root.openFormByType('vending_machine')"  class="icon fivelink">
+            	
             	<ng-md-icon icon="local_drink" style="fill: white" size="25"></ng-md-icon>
             </a>
             <a href="#" class="icon sixlink">
