--- a/public/assets/css/layout.style.css
+++ b/public/assets/css/layout.style.css
@@ -2,7 +2,7 @@
 * {margin:0; padding:0; outline:0; box-sizing:border-box; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -o-box-sizing:border-box; -ms-box-sizing:border-box;}
 html, body {width:100%; height:100%;}
 body {font-family: 'Open Sans', sans-serif; font-size:14px; line-height:normal; color:#222222; background:#ffffff;}
-a, a:focus , input, button , select, textrea{outline:none; text-decoration:none!important; color:#333; }
+a, a:focus , input, button , select, textrea{outline:none; text-decoration:none!important; color:inherit; }
 .width100{width: 100%;}
 md-dialog.md-default-theme, md-dialog{border-radius: 0;}
 md-checkbox.md-checked .md-icon {background-color: rgba(255,187,66,1)!important;}
@@ -11,26 +11,25 @@ ul {padding:0; margin:0; list-style:none;}
 .theme-color{color: #4ebdf6;}
 .theme-color:hover{color: #4ebdf6;}
 .mar-bot20{margin-bottom: 20px}
+.mar-bot15{margin-bottom: 15px}
+.textlower{text-transform: none!important;}
+.fontnormal{font-weight: 400!important;}
 md-input-container .md-errors-spacer{min-height: 17px;}
-.bx-slider-loader {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 1;
-}
-bx-slider{
-	position: relative;    display: block;
-}
+.bx-slider-loader {position: absolute;top: 0;bottom: 0;left: 0;right: 0;z-index: 1;}
+bx-slider{position: relative;display: block;}
 .mainhd{font-size: 36px; color: #000; font-weight: 800; margin-bottom: 10px;}
 .mainsubhd{font-size: 15px; color: #7b7b7b; font-style: italic; margin-bottom: 20px;}
+.selectgeneral{padding: 0;height: 28px;border: 1px solid #ddd; margin-bottom: 0!important;}
+.selectgeneral md-select-value{height: 26px!important; padding:0 5px 0 10px!important; min-width: 28px!important;}
+.selectgeneral .md-select-value .md-select-icon{width: 13px!important;}
+.selectgeneral38{padding: 0;height: 38px;border: 1px solid #ddd; margin-bottom: 0!important;}
+.selectgeneral38 md-select-value{height: 36px!important; padding:0 10px 0 10px!important; }
 .frontheder{width: 100%; padding:10px;}
-.front_hrader_menu {padding: 15px 0; }
-.frontnav ul > li{float: left; padding: 0 17px; }
+.front_hrader_menu {padding: 15px 0;}
+.frontnav ul > li{float: left; padding: 0 17px;}
 .frontnav ul > li > a{display: block; font-weight: 600; line-height: 35px; font-size: 15px; color: #737681; text-transform: uppercase;}
 .frontnav ul > li > a:hover, .frontnav > li > a:focus{text-decoration: none;}
-.frontnav_login ul > li {float: left; margin-left: 10px;}
+.frontnav_login ul > li {float: left ; margin-left: 10px;}
 .frontnav_login ul > li > a{font-size: 15px;border: 1px solid #c0c0c0; padding: 7px 20px; font-weight: 600; color: #484e64; line-height: 35px;}
 .frontnav_login ul > li > a:hover, .frontnav_login ul > li > a:hover, .frontnav_login ul > li > a.active{background: #ffbb42; color: #fff; border: 1px solid #ffbb42; text-decoration: none; }
 .mobile-menu_div{display:none;  position: absolute;right: 10px;top: 0; }
@@ -40,7 +39,6 @@ bx-slider{
 .mobile-menu.openleftmenu span:nth-child(2){opacity:0;}
 .mobile-menu span{ width: 35px;height: 5px;background:#ffbb42;display:block; -webkit-transition:ease-in-out .5s; -moz-transition:ease-in-out .5s; -ms-transition:ease-in-out .5s; -o-transition:ease-in-out .5s; transition:ease-in-out .5s; }
 .mobile-menu span:nth-child(2){ margin:6px 0;}
-
 .frontfoter{padding:0 10px 10px; background: #fff;}
 .frontfoter_inner{padding: 45px; background: url('../../images/footer_bg.jpg') 0 0 no-repeat; background-size: cover;}
 .leftfotter{float: left; width: calc(100% - 330px); padding-right: 30px;}
@@ -59,3 +57,18 @@ bx-slider{
 .fotter_links ul > li > a:hover, .fotter_links ul > li > a:focus{color: #ffbb42; text-decoration: none;}
 .fotter_links ul > li > a:after{ content: ''; position: absolute; width: 4px; height: 4px; border-radius: 5px; -webkit-border-radius: 5px; background: #8c8c8c; top: 0; left: 0; bottom: 0; margin: auto;}
 .fotter_links ul > li > a:hover:after, .fotter_links ul > li > a:focus:after{background:#ffbb42;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
