1) Fixed sidebar style. 2) Setup notification for jot. 3) Loader icon on hotel setup wizard

--- a/public/modules/dashboard/views/step3.html
+++ b/public/modules/dashboard/views/step3.html
@@ -3,7 +3,7 @@
 	<div class="deprtment_list">
 
 		<ul class="clearfix">
-			<li ng-repeat="department in defaultDepartment" style="margin-top: 0;">
+			<li ng-repeat="department in defaultDepartment" style="margin-top: 0;    margin-bottom: 10px;">
 
 
 				<div class="yellowlay clearfix">
