--- a/public/modules/dashboard/views/step4.html
+++ b/public/modules/dashboard/views/step4.html
@@ -2,7 +2,7 @@
 <form name="step4Form" ng-submit="step4FormSubmit(step4Form.$valid)" novalidate ng-show="!forget">		
 	<div class="deprtment_list">	
 	<ul class="clearfix">
-			<li ng-repeat="emp in addedEmployee track by $index" style="margin-top: 0;">
+			<li ng-repeat="emp in addedEmployee track by $index" style="margin-top: 0;    margin-bottom: 10px;">
 				<div class="yellowlay clearfix">
 					<div class="pull-left capitalize FULLMANE"> 
 						{{emp.first_name}} {{emp.last_name}}
