--- a/public/modules/dashboard/views/step5.html
+++ b/public/modules/dashboard/views/step5.html
@@ -2,7 +2,7 @@
 <form name="step5Form" ng-submit="step5FormSubmit(step5Form.$valid)" novalidate ng-show="!forget">		
 	<div class="deprtment_list">	
 	<ul class="clearfix">
-			<li ng-repeat="room in addedRooms track by $index" style="margin-top: 0;">
+			<li ng-repeat="room in addedRooms track by $index" style="margin-top: 0;    margin-bottom: 10px;">
 				<div class="yellowlay clearfix">
 					<div class="pull-left capitalize FULLMANE"> 
 						{{room.name}}
