--- a/public/modules/partials/footer.html
+++ b/public/modules/partials/footer.html
@@ -1,4 +1,12 @@
 <div ng-controller="footerController">
+
+<div layout="row" layout-sm="column" ng-show = "$root.hoteljotLoader" class="hoteljot_loader">
+	<md-progress-circular class="hoteljot_loader_icon" md-mode="indeterminate"></md-progress-circular>
+	<span class="loading_text">Please Wait...</span>
+</div>
+
+
+
 <div class="frontfoter" ng-if="isAuth.footer=='yes'">
 	<div class="frontfoter_inner">
 		<div class="container clearfix">
