--- a/public/modules/partials/sidebar.html
+++ b/public/modules/partials/sidebar.html
@@ -1,4 +1,9 @@
 <!-- <close-on-outside-click> -->
+<div class="quick_edit_small_section_header" style="text-align: left;border-bottom-color: #ddd;">
+   <ng-md-icon icon="home" class="cursor" style="fill:#fff;top: -2px;left: 6px;margin-right: 14px;   position: relative;" size="25;"></ng-md-icon>
+    <span class="quick_edit_section_title" style="color:#fff;font-weight: 600;    font-size: 17px;"> Dashboard</span>
+    <ng-md-icon class="quick_close_btn" icon="close" style="fill:#fff;right: 26px;" size="24"  ng-click="$root.toggleSidebar()" role="button" tabindex="0"></ng-md-icon> 
+    </div> 
 <div ng-controller="sidebarCntroller">
 <!-- 
 <div class="toogle_menu_list" ng-if="isAuth.outside != 'yes'" outside-click-sidebar='closeSidebar'> -->
