--- a/public/assets/css/dashboard-home.style.css
+++ b/public/assets/css/dashboard-home.style.css
@@ -501,7 +501,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 .features_listoptopn > li .green_tag{position: absolute; padding: 5px 10px; top:0; width: 86px; background: #54914a;color: #fff; font-size: 15px; font-weight: 600; text-transform: uppercase;top: 24px;transform: rotate(-41deg);left: 0;}
 .features_listoptopn > li .green_tag:after{ border-bottom: 30px solid #54914a;border-left: 0px solid transparent;border-right: 36px solid transparent;content: "";position: absolute;right: -35px;top: 0px;z-index: 10;}
 .features_listoptopn > li .green_tag:before{ border-bottom: 30px solid #54914a;border-right: 0px solid transparent;border-left: 28px solid transparent;content: "";position: absolute;left: -27px;top: 0px;z-index: 10;}
-.features_listoptopn > li .icon_left{width: 55px; margin: 0 auto 15px auto; height: 55px; background: #ffbb42; border-radius: 50%; -webkit-border-radius: 50%;}
+.features_listoptopn > li .icon_left{width: 55px; margin: 0 auto 15px auto; height: 55px; /*background: #ffbb42;*/ border-radius: 50%; -webkit-border-radius: 50%;}
 .features_listoptopn > li h4{color: #000; margin-top: 0; text-transform: uppercase; font-size: 16px; margin-bottom: 5px; font-weight: 800;}
 .features_listoptopn > li p{color: #7b7b7b; font-size: 13px; padding: 0 20px; line-height: 22px; margin-bottom: 0; min-height: 75px; }
 /************************************hotel-meesage***************************/
