--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -483,3 +483,34 @@ md-toolbar {
     left: 0 !important;
     padding-left: 0!important;
 }
+
+
+.hoteljot_loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 99999;
+    background: rgba(0,0,0,0.5);
+    text-align: center;
+    transition: all ease 0.5s;
+}
+
+.loading_text {
+    position: absolute;
+    left: 50%;
+    color: #fff;
+    top: 50%;
+    margin-left: -42px;
+    margin-top: 35px;
+}
+
+.hoteljot_loader_icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -25px auto auto -25px;
+}
