--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -501,7 +501,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 .features_listoptopn > li .green_tag{position: absolute; padding: 5px 10px; top:0; width: 86px; background: #54914a;color: #fff; font-size: 15px; font-weight: 600; text-transform: uppercase;top: 24px;transform: rotate(-41deg);left: 0;}
 .features_listoptopn > li .green_tag:after{ border-bottom: 30px solid #54914a;border-left: 0px solid transparent;border-right: 36px solid transparent;content: "";position: absolute;right: -35px;top: 0px;z-index: 10;}
 .features_listoptopn > li .green_tag:before{ border-bottom: 30px solid #54914a;border-right: 0px solid transparent;border-left: 28px solid transparent;content: "";position: absolute;left: -27px;top: 0px;z-index: 10;}
-.features_listoptopn > li .icon_left{width: 55px; margin: 0 auto 15px auto; height: 55px; background: #ffbb42; border-radius: 50%; -webkit-border-radius: 50%;}
+.features_listoptopn > li .icon_left{width: 55px; margin: 0 auto 15px auto; height: 55px; /*background: #ffbb42;*/ border-radius: 50%; -webkit-border-radius: 50%;}
 .features_listoptopn > li h4{color: #000; margin-top: 0; text-transform: uppercase; font-size: 16px; margin-bottom: 5px; font-weight: 800;}
 .features_listoptopn > li p{color: #7b7b7b; font-size: 13px; padding: 0 20px; line-height: 22px; margin-bottom: 0; min-height: 75px; }
 /************************************hotel-meesage***************************/
@@ -2821,6 +2821,37 @@ md-toolbar {
     top: -23px !important;
     left: 0 !important;
     padding-left: 0!important;
+}
+
+
+.hoteljot_loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 99999;
+    background: rgba(0,0,0,0.5);
+    text-align: center;
+    transition: all ease 0.5s;
+}
+
+.loading_text {
+    position: absolute;
+    left: 50%;
+    color: #fff;
+    top: 50%;
+    margin-left: -42px;
+    margin-top: 35px;
+}
+
+.hoteljot_loader_icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -25px auto auto -25px;
 }
 @media(max-width:1900px){ 
 .hotel_list_edit > li{margin-right:95px;}
